Refactor JdbcExecutor to improve result set processing and normalize null values; update SqlSecurityValidator to precompile keyword patterns for enhanced security checks